kubernetes/applications/wiki-js/wiki-js/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki-js
  labels:
    app.kubernetes.io/name: wiki-js
    app.kubernetes.io/part-of: everlab
