kubernetes/applications/wiki-js/wiki-js/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-js
  namespace: wiki-js
  labels:
    app.kubernetes.io/name: wiki-js
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: wiki-js

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
