kubernetes/applications/wiki-js/wiki-js/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiki-js
  namespace: wiki-js
  labels:
    app.kubernetes.io/name: wiki-js
    app.kubernetes.io/part-of: everlab
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - wiki.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: wiki-js
          port: 3000
          weight: 1
